fix: overflow-x hidden

--- a/review_app/static/css/style.css
+++ b/review_app/static/css/style.css
@@ -1,3 +1,9 @@
+html, body
+{ 
+    overflow-x: hidden; 
+}
+
+
 body {
     font-family: "Montserrat", sans-serif
 }
